--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -27,7 +27,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: imashen
+          user: tutuxka
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Hong_Kong
