--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -52,3 +52,6 @@ jobs:
           plugin_people_types: followers, following
           plugin_projects: yes
           plugin_projects_limit: 4
+          plugin_reactions: yes
+          plugin_reactions_limit: 100
+          plugin_reactions_details: percentage
