--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -33,7 +33,7 @@ jobs:
           config_timezone: Asia/Hong_Kong
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_secrets: no
+          plugin_achievements_secrets: yes
           plugin_achievements_threshold: X
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
